# air-quality-forecast

./: .gitignore  Makefile  README.md  bootstrap.ps1  prompt 1 new project.txt  pyproject.toml
data/metrics/: threshold_analysis.csv
notebooks/: 01_EDA.ipynb
src/air_quality/: config.py  test_import.py
src/air_quality/data/: ingest.py  make_dataset.py
src/air_quality/data_contract/: aggregation.py  evaluate.py  models.py
src/air_quality/data_contract/checks/: base.py  operational.py
src/air_quality/features/: build_features.py
src/air_quality/modeling/: train_baseline.py  train_calibrated.py
